# embodied-claude

./: .gitignore  .mcp.json.example  intro.md
memory-mcp/src/memory_mcp/: store.py
memory-mcp/tests/: test_connect.py
scripts/: install-mcps.sh
tts-mcp/src/tts_mcp/: config.py  server.py  voicevox_runner.py
voicevox-core-server/: .gitignore  pyproject.toml
voicevox-core-server/voicevox_core_server/: server.py
