[project]
name = "voicevox-core-server"
version = "0.1.0"
description = "voicevox_engine-compatible HTTP wrapper around voicevox_core"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
    "voicevox-core",
]

[tool.uv.sources]
voicevox-core = { url = "https://github.com/VOICEVOX/voicevox_core/releases/download/0.16.4/voicevox_core-0.16.4-cp310-abi3-macosx_11_0_arm64.whl" }

[project.scripts]
voicevox-core-server = "voicevox_core_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voicevox_core_server"]
